# oasis-observatory

./: .env.example  .gitignore  LICENSE  README.md  methodology.md  pyproject.toml  requirements.txt
data/: deduplicate_signals.py
oasis/: __init__.py  config.py  logger.py
oasis/analyzer/: cli_analyzer.py  core_analyzer.py  evolution_engine.py  linkage.py  llm_linker.py  probability_updater_v2.py
oasis/common/: abbreviator.py  consistency.py  db.py  llm_client.py  schema.py  storage.py  timeline.py
oasis/dashboard/: asi_scenario_viewer.py
oasis/ev_generator/: cli_ev.py  core_ev.py  params_ev.py
oasis/m_generator/: __init__.py  cli_m.py  core_m.py  database.py  interact.py  narrator.py  renderer.py  schema_m.py  storage_m.py
oasis/s_generator/: __init__.py  abbreviator.py  batch_generate.py  cli.py  cli_s.py  consistency.py  core.py  core_s.py  params.py  storage.py  storage_s.py  timeline.py
oasis/s_generator/clients/: ollama.py
oasis/tracker/: classifier.py  cli_tracker.py  core_t.py  database_t.py
schemas/: asi_scenario_v1.json
tests/: test_generator.py  test_oasis_1.py
tools/: generate_report.py
