[project]
name = "oasis-observatory"
version = "0.1.0"
dependencies = [
    "pydantic-settings",
    "typer[all]",
    "jsonschema",
    "structlog"
]


[tool.poetry]
name = "oasis-observatory"
version = "0.1.1-alpha"
description = "OASIS Observatory – ASI scenario generation and tracking"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "oasis"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12"
ollama = "^0.3"
structlog = "^24.1"
pydantic = "^2.8"
requests = "^2.32.0"          # runtime dependency we added earlier
jsonschema = "^4.25.1"
pydantic-settings = "^2.5"    # <-- newly added
feedparser = "^6.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
black = "^24.8"
ruff = "^0.6"
mypy = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"