[tool.poetry]
name = "oasis-observatory"
version = "0.1.1-alpha"
description = "OASIS Observatory – ASI scenario generation and tracking"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "oasis"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12"}
ollama = "^0.3"
structlog = "^24.1"
pydantic = "^2.8"
pydantic-settings = "^2.5"
jsonschema = "^4.25.1"
requests = "^2.32.0"
feedparser = "^6.0.12"

# ←←← ADD THESE THREE LINES ONLY ←←←
pandas = { version = "^2.2", optional = true }
matplotlib = { version = "^3.8", optional = true }
reportlab = { version = "^4.0", optional = true }

[tool.poetry.extras]
report = ["pandas", "matplotlib", "reportlab"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
black = "^24.8"
ruff = "^0.6"
mypy = "^1.11"

[tool.poetry.scripts]
oasis = "oasis.tracker.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"